--- a/style.css
+++ b/style.css
@@ -24,4 +24,7 @@
             font-family: monospace;
             color: whitesmoke;
         }
-        
+         h5 {
+            color: aliceblue;
+            background-color: deeppink;
+         }
