--- a/style.css
+++ b/style.css
@@ -28,3 +28,7 @@
             color: aliceblue;
             background-color: deeppink;
          }
+         
+         # Topone {
+            color: aqua;
+         }
