--- a/style.css
+++ b/style.css
@@ -28,7 +28,25 @@
             color: aliceblue;
             background-color: deeppink;
          }
-         
-         # Topone {
-            color: aqua;
+
+         h3 {
+            background-color: deeppink;
+            color: aliceblue;
          }
+
+        .Top {
+            color: aqua;
+        }
+         
+        #why {
+            font-size: medium;
+        }
+
+        .fav {
+            color: aqua;
+        }
+
+        #sources {
+            font-size: larger;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
